# internal/routers/common/common.go
@@ -2,6 +2,7 @@ package common
 
 import (
 	"github.com/gin-gonic/gin"
+	"golang-admin/internal/model"
 	"golang-admin/internal/service"
 	"golang-admin/pkg/app"
 	"golang-admin/pkg/errcode"
@@ -13,11 +14,20 @@ func NewCommon() Common {
 	return Common{}
 }
 
+// GetOssAccessToken godoc
+// @Summary 获取oss凭证
+// @Tags 通用
+// @Produce json
+// @Success 200 {object} swagOssCredentials "获取oss凭证成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /common/getossaccesstoken [get]
 func (Common) GetOssAccessToken(c *gin.Context) {
 	response := app.NewResponse(c)
 	credentials, err := app.CreateCredentials()
 	if err != nil {
 		response.Error(errcode.OssInternalError)
+		return
 	}
 
 	response.SuccessData(credentials)
@@ -40,4 +50,9 @@ func (Common) WechatLogin(c *gin.Context) {
 	}
 
 	response.SuccessData(user)
+}
+
+type swagOssCredentials struct {
+	model.SwagCommon
+	Data *app.OssCredentials `json:"data"`
 }
